drop compass gem
This doesn't seem to actually load with modern rails, and the gem has
been marked as deprecated and "do not use" since 2016.

There's a fair bit of hackery to make this work:

  - I think the "unstyled" style was coming from compass, and now
    doesn't exist. This causes sass compilation to complain. I've marked
    it here with "!optional", though I suspect these lines are simply
    doing nothing now.

  - lots of includes were needed within various scss files. Presumably
    compass was auto-loading these before.

  - I dropped compass's "global-reset". Which would have given us a
    saner base to work from, but not knowing much about css myself, I'm
    not sure what another good way is to do the same thing. So let's
    cross our fingers and hope for the best.

--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "mixins";
+@import "layout";
+
 #logo-license {
   @extend .callout;
   padding: 20px !important;
@@ -59,7 +63,7 @@
 
 #download-next-steps {
   @include clearfix;
-  @extend .unstyled;
+  @extend .unstyled !optional;
   padding-top: 24px;
 
   li {
