--- a/app/assets/stylesheets/front-page.scss
+++ b/app/assets/stylesheets/front-page.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "mixins";
+@import "layout";
+
 #front-content {
   @include clearfix;
   overflow: visible;
@@ -14,7 +18,7 @@
   @include clearfix;
 
   ul {
-    @extend .unstyled;
+    @extend .unstyled !optional;
     padding-top: 24px;
 
     li {
@@ -202,7 +206,7 @@ $monitor-height: 271px;
   border-top: solid 1px $base-border-color;
 
   ul {
-    @extend .unstyled;
+    @extend .unstyled !optional;
 
     li {
       display: block;
