--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,5 +1,9 @@
+@import "variables";
+@import "mixins";
+@import "layout";
+
 .content-list {
-  @extend .unstyled;
+  @extend .unstyled !optional;
   margin-left: 0;
 
   li {
@@ -70,7 +74,7 @@ ul.books-list {
 }
 
 ol#about-nav {
-  @extend .unstyled;
+  @extend .unstyled !optional;
   @include clearfix;
 
   li {
@@ -126,7 +130,7 @@ ol#about-nav {
 }
 
 ul.stackoverflow {
-  @extend .unstyled;
+  @extend .unstyled !optional;
   font-size: 12px;
 
   li {
