--- a/app/assets/stylesheets/man-pages.scss
+++ b/app/assets/stylesheets/man-pages.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "mixins";
+@import "layout";
+
 #documentation #main {
   p {
     em {
@@ -8,7 +12,7 @@
     }
 
     tt {
-      @extend code;
+      @extend code !optional;
       display: inline;
       padding: 1px;
     }
