--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "mixins";
+@import "layout";
+
 .topics h3, .topics ul li {
   padding-left: 23px;
 }
@@ -213,7 +217,7 @@ h3.plumbing {
 }
 
 ol.reference-previous-versions {
-  @extend .unstyled;
+  @extend .unstyled !optional;
   margin-top: 3px;
   margin-bottom: 0;
   border-top: dotted 1px #e3e3e1;
