--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "mixins";
+@import "layout";
+
 #search-results {
   position: absolute;
   top: 2px;
@@ -70,7 +74,7 @@
     }
 
     ul {
-      @extend .unstyled;
+      @extend .unstyled !optional;
       margin-bottom: 0;
     }
 
@@ -81,7 +85,7 @@
 }
 
 ol.full-search-results {
-  @extend .unstyled;
+  @extend .unstyled !optional;
 
   li {
     margin-bottom: 2em;
