--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins";
+
 body {
   padding: 0;
   margin: 0;
@@ -265,7 +268,7 @@ p.center {
 }
 
 .section-nav-container {
-  @extend .unstyled;
+  @extend .unstyled !optional;
   position: relative;
   background-color: #ebe9e1;
   background-color: rgba(223, 221, 213, 0.33);
