rename link "Mac OS X" → macOS in downloads/index

--- a/app/views/downloads/index.html.erb
+++ b/app/views/downloads/index.html.erb
@@ -14,7 +14,7 @@
         <table class="binaries">
           <tr>
             <td>
-              <%= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'} %>
+              <%= link_to "macOS", "/download/mac", {:class => 'icon mac'} %>
             </td>
             <td>
               <%= link_to "Windows", "/download/win", {:class => 'icon windows'} %>
