fix html anchor in guides list

--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -12,5 +12,5 @@
   <li><%= man('gitsubmodules', 'Submodules') %></li>
   <li><%= man('gittutorial', 'Tutorial') %></li>
   <li><%= man('gitworkflows', 'Workflows') %></li>
-  <li><a href="/docs/git#_guides">All guides...<a/></li>
+  <li><a href="/docs/git#_guides">All guides...</a></li>
 </ul>
