Fix book images

--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -10,7 +10,7 @@
         </p>
       </li>
       <li>
-        <a href="https://www.packtpub.com/application-development/mastering-git"><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/b/0/b03537_cover.png"></a>
+        <a href="https://www.packtpub.com/application-development/mastering-git"><img src="https://static.packt-cdn.com/products/9781783553754/cover/smaller"></a>
         <h4><a href="https://www.packtpub.com/application-development/mastering-git">Mastering Git</a></h4>
         <p class='description'>
           By Jakub Narębski
@@ -30,22 +30,22 @@
           By Peter Savage
       </li>
       <li>
-        <a href="https://www.packtpub.com/git-version-control-for-everyone/book"><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/7/5/7522os_0.jpg"/></a>
+        <a href="https://www.packtpub.com/git-version-control-for-everyone/book"><img src="https://static.packt-cdn.com/products/9781849517522/cover/smaller"/></a>
         <h4><a href="https://www.packtpub.com/git-version-control-for-everyone/book">Git: Version Control for Everyone</a></h4>
         <p class='description'>
           By Ravishankar Somasundaram
         </p>
       </li>
       <li>
-        <a href="https://www.packtpub.com/application-development/git-essentials-second-edition"><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/b/0/b06881.png"/></a>
+        <a href="https://www.packtpub.com/application-development/git-essentials-second-edition"><img src="https://static.packt-cdn.com/products/9781787120723/cover/smaller"/></a>
         <h4><a href="https://www.packtpub.com/application-development/git-essentials-second-edition">Git Essentials - Second Edition</a></h4>
         <p class='description'>
           By Ferdinando Santacroce
         </p>
       </li>
      <li>
-        <a href="https://www.amazon.com/dp/1789137543"><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/b/1/b10764_mockupcover.png"/></a>
-        <h4><a href="https://www.amazon.com/dp/1789137543">Git Version Control Cookbook - Second Edition</a></h4>
+        <a href="https://www.packtpub.com/product/git-version-control-cookbook-second-edition/9781789137545"><img src="https://static.packt-cdn.com/products/9781789137545/cover/smaller"/></a>
+        <h4><a href="https://www.packtpub.com/product/git-version-control-cookbook-second-edition/9781789137545">Git Version Control Cookbook - Second Edition</a></h4>
         <p class='description'>
           By Kenneth Geisshirt
         </p>
@@ -90,7 +90,7 @@
         </p>
       </li>
       <li>
-        <a href="https://www.packtpub.com/application-development/git-version-control-cookbook"><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/9/7/9781782168454.png"></a>
+        <a href="https://www.packtpub.com/application-development/git-version-control-cookbook"><img src="https://static.packt-cdn.com/products/9781782168454/cover/smaller"></a>
         <h4><a href="https://www.packtpub.com/application-development/git-version-control-cookbook">Git Version Control Cookbook</a></h4>
         <p class='description'>
           By Aske Olsson and Rasmus Voss
@@ -104,7 +104,7 @@
         </p>
       </li>
       <li>
-        <a href="https://www.packtpub.com/application-development/version-control-git-and-github"><img src="https://www.packtpub.com/media/catalog/product/cache/e4d64343b1bc593f1c5348fe05efa4a6/b/1/b12556_lowres_cover.png"></a>
+        <a href="https://www.packtpub.com/application-development/version-control-git-and-github"><img src="https://static.packt-cdn.com/products/9781789808971/cover/smaller"></a>
         <h4><a href="https://www.packtpub.com/application-development/version-control-git-and-github">Version Control with Git and GitHub</a></h4>
         <p class='description'>
           By Alex Magana, Joseph Muli
