--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -36,6 +36,6 @@
   <footer>
     <span class="light">Check your version of git by running<br></span>
     <strong>$</strong>
-    <input type="text" class="copyable" value="git --version" />
+    <input readonly type="text" class="copyable" value="git --version" />
   </footer>
 </div>
