Add a class to shell prompt
In `#previous-versions-dropdown footer`.

--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -148,7 +148,7 @@ h3.plumbing {
       user-select: all;
     }
 
-    span {
+    span.prompt {
       user-select: none;
       font-weight: bold;
     }
