--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -35,6 +35,6 @@
   </ol>
   <footer>
     <p>Check your version of git by running</p>
-    <code><span>$ </span>git --version</code>
+    <code><span class="prompt">$ </span>git --version</code>
   </footer>
 </div>
