Use ::before pseudo-element for the shell prompt
Of the `git --version` code snippet.

--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -146,11 +146,11 @@ h3.plumbing {
 
     code {
       user-select: all;
-    }
 
-    span.prompt {
-      user-select: none;
-      font-weight: bold;
+      &::before {
+        content: '$ ';
+        font-weight: bold;
+      }
     }
   }
 }
