Add class for code blocks that represent a command

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -35,6 +35,6 @@
   </ol>
   <footer>
     <p>Check your version of git by running</p>
-    <code>git --version</code>
+    <code class="command">git --version</code>
   </footer>
 </div>
