Highlight active section with the orange color
For better usability, highlight the active book section with a distinct color for a faster scan.

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -139,6 +139,7 @@ ol.book-toc {
 
           &.active {
             font-weight: bold;
+            color: $orange;
           }
         }
       }
