update links to https://github.com/git/git-scm.com/.../master
The default branch will be switching to "main". I think GitHub would
actually redirect these for us, but there's no reason not to give the
new canonical location.

Note that there are many mentions of "master" for git/git,
progit/progit2, etc. Those repositories are still using "master" for
now.

--- a/app/views/downloads/guis/index.html.erb
+++ b/app/views/downloads/guis/index.html.erb
@@ -12,7 +12,7 @@
     Git comes with built-in GUI tools for committing (<a href="/docs/git-gui">git-gui</a>) and browsing (<a href="/docs/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
   </p>
   <p>
-    <small>If you want to add another GUI tool to this list, just <a href="https://github.com/git/git-scm.com/blob/master/README.md#adding-new-gui">follow the instructions</a>.</small>
+    <small>If you want to add another GUI tool to this list, just <a href="https://github.com/git/git-scm.com/blob/main/README.md#adding-new-gui">follow the instructions</a>.</small>
   </p>
 
   <p>
