stylesheets: reuse code
Variables exist for a reason.

Signed-off-by: Felipe Contreras <felipe.contreras@gmail.com>

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,8 +13,8 @@ $link-focus-color:   false;
 $link-active-color:  false;
 $link-visited-color: false;
 
-$base-font-family: Adelle, Georgia, Times New Roman, serif;
 $base-font-family-fallback: Georgia, Times New Roman, serif;
+$base-font-family: Adelle, $base-font-family-fallback;
 $base-font-size:   14px;
 $base-line-height: 22px;
 
