--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -13,7 +13,7 @@ $link-focus-color:   false;
 $link-active-color:  false;
 $link-visited-color: false;
 
-$base-font-family-fallback: Georgia, Times New Roman, serif;
+$base-font-family-fallback: Roboto Slab, DejaVu Serif, Georgia, Times New Roman, sans-serif;
 $base-font-family: Adelle, $base-font-family-fallback;
 $base-font-size:   14px;
 $base-line-height: 22px;
