about: minor grammatical fixes

--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -7,7 +7,7 @@
     </p>
 
     <p>
-      Git was built to work on the Linux kernel, meaning that it has had to effectively handle large repositories from day one. Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Speed and performance has been a primary design goal of the Git from the start.
+      Git was built to work on the Linux kernel, meaning that it has had to effectively handle large repositories from day one. Git is written in C, reducing the overhead of runtimes associated with higher-level languages. Speed and performance has been a primary design goal of Git from the start.
     </p>
 
     <h3>Benchmarks</h3>
@@ -70,7 +70,7 @@
     </p>
 
     <p>
-      In some cases the commands don't match up exactly. Here, matching on the lowest
+      In some cases, the commands don't match up exactly. Here, matching on the lowest
       common denominator was attempted. For example, the 'commit' tests also include
       the time to push for Git, though most of the time you would not actually be pushing
       to the server immediately after a commit where the two commands cannot be separated
