Add 'Beginning Git and GitHub' to ext book list

--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -109,7 +109,14 @@
         <p class='description'>
           By Alex Magana, Joseph Muli
         </p>
-      </li>      
+      </li>
+      <li>
+        <a href="https://www.apress.com/book/9781484253120"><img src="https://media.springernature.com/w153/springer-static/cover/book/9781484253137.jpg"></a>
+        <h4><a href="https://www.apress.com/book/9781484253120">Beginning Git and GitHub</a></h4>
+        <p class='description'>
+          By Mariot Tsitoara
+        </p>
+      </li>
     </ul>
   </div>
 </div>
