community: run 'git bugreport' in your repository
Mention that 'git bugreport' should be run in the repository where the
bug was observed, to make sure that any hooks that could be at play are
collected and listed in the report. This might lead to less back and
forth like in [1].

[1] https://lore.kernel.org/git/CAHBARKezrkKAs0ACbJ_fnxR-qWacQ5KKuVLwn0WyT7aR+4++pQ@mail.gmail.com/T/#u

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -50,7 +50,8 @@
 
   <p>
     If you are using git 2.27.0 or later, you can run
-    <a href="/docs/git-bugreport"><span class="fixed">git bugreport</span></a>,
+    <a href="/docs/git-bugreport"><span class="fixed">git bugreport</span></a> in the repository
+    where you observed the bug,
     which generates a template to guide you through writing a useful bug
     report and gathers some diagnostic information about your
     environment.
