Add responsive mode, collapsable sidebar, scroll to top

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@
 code {
   display: inline;
   padding: 0 5px;
+  word-break: break-all;
 }
 
 pre {
@@ -43,4 +44,8 @@ pre {
   margin-bottom: 1em;
   overflow: auto;
   padding: 10px 15px 13px;
+}
+
+.d-flex{
+  display: flex;
 }
