--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -150,3 +150,18 @@ ol.book-toc {
 .switch a {
   color: #aaa;
 }
+
+.book-wrapper {
+  float:right;
+  margin: -20px 40px 0 40px;
+}
+
+@media (min-width: $mobile-m) {
+  .book-toc {
+    width: 60%
+  }
+  .book-wrapper {
+    position: sticky;
+    top: 2rem;
+  }
+}
