--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -350,6 +350,9 @@ p.quickref {
   padding: 10px 10px 2px;
   margin-bottom: 20px;
   background-color: $callout-color;
+  iframe {
+    max-width: 100%;
+  }
 }
 
 code.command {
@@ -358,5 +361,13 @@ code.command {
   &::before {
     content: '$ ';
     font-weight: bold;
+  }
+}
+
+@media (max-width: $mobile-m){
+  #video-container {
+    iframe {
+      height: auto;
+    }
   }
 }
