--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -31,3 +31,56 @@ aside.sidebar {
     }
   }
 }
+
+// Floating sidebar button for tablet and smaller screens
+.sidebar-btn {
+    display: none;
+    position: absolute;
+    right: -30px;
+    background-color: $black-3;
+    padding: 30px 3px;
+    top: 0;
+}
+aside.sidebar.active {
+    background-color: #efefe7;
+    z-index: 305;
+    left: 0;
+    box-shadow: 6px 2px 8px 0px rgba(28,28,28,0.10%);
+    border: thin solid #ddd;
+    border-radius: 0 5px 5px 0;
+    transform: translateX(0%);
+    .sidebar-btn {
+      padding: 10px;
+      right: 0;
+      @include border-radius(5px);
+      background-color: #efefe7;
+    }
+}
+
+// Breakpoint ----------------
+@media (max-width: $default) {
+  #overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  aside.sidebar {
+    position: fixed;
+    transform: translateX(-105.5%);
+    transition: transform 0.3s, background-color 0.3s;
+    padding: 20px;
+    height: 100%;
+    z-index: 1;
+  }
+  .sidebar-btn {
+    display: flex;
+    justify-content: end;
+    transition: padding 0.3s;
+    @include border-top-right-radius(5px);
+    @include border-bottom-right-radius(5px);
+  }
+}
