--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,7 +2,13 @@
 $orange:             #f14e32;
 $blue:               #009099;
 
-$page-width:         940px;
+// breakpoints
+$mobile-xs: 480px;
+$mobile-s: 576px;
+$mobile-m: 640px;
+$tablet: 768px;
+$default:  940px;
+$page-width: $default;
 
 $font-color:  		   #4e443c;
 $light-font-color:   #9a9994;
@@ -24,3 +30,5 @@ $fixed-width-line-height: 18px;
 
 $base-border-color:  #d8d7cf;
 $callout-color:      #e9e8e0;
+
+$black-3 : #333333;
