--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -81,26 +81,28 @@
       All of these times are in seconds.
     </p>
 
-    <table class="benchmarks">
-      <tbody>
-        <tr>
-          <th>Operation</th>
-          <th></th>
-          <th class="right">Git</th>
-          <th class="right">SVN</th>
-        </tr>
-        <tr><td nowrap="">Commit Files (A)</td><td class="desc">Add, commit and push 113 modified files (2164+, 2259-)</td><td class="number">0.64</td><td class="number">2.60</td><td class="number">4x</td></tr>
-        <tr><td nowrap="">Commit Images (B)</td><td class="desc">Add, commit and push a thousand 1&nbsp;kB images</td><td class="number">1.53</td><td class="number">24.70</td><td class="number">16x</td></tr>
-        <tr><td nowrap="">Diff Current</td><td class="desc">Diff 187 changed files (1664+, 4859-) against last commit</td><td class="number">0.25</td><td class="number">1.09</td><td class="number">4x</td></tr>
-        <tr><td nowrap="">Diff Recent</td><td class="desc">Diff against 4 commits back (269 changed/3609+,6898-)</td><td class="number">0.25</td><td class="number">3.99</td><td class="number">16x</td></tr>
-        <tr><td nowrap="">Diff Tags</td><td class="desc">Diff two tags against each other (v1.9.1.0/v1.9.3.0)</td><td class="number">1.17</td><td class="number">83.57</td><td class="number">71x</td></tr>
-        <tr><td nowrap="">Log (50)</td><td class="desc">Log of the last 50 commits (19&nbsp;kB of output)</td><td class="number">0.01</td><td class="number">0.38</td><td class="number">31x</td></tr>
-        <tr><td nowrap="">Log (All)</td><td class="desc">Log of all commits (26,056 commits &ndash; 9.4&nbsp;MB of output)</td><td class="number">0.52</td><td class="number">169.20</td><td class="number">325x</td></tr>
-        <tr><td nowrap="">Log (File)</td><td class="desc">Log of the history of a single file (array.c &ndash; 483 revs)</td><td class="number">0.60</td><td class="number">82.84</td><td class="number">138x</td></tr>
-        <tr><td nowrap="">Update</td><td class="desc">Pull of Commit A scenario (113 files changed, 2164+, 2259-)</td><td class="number">0.90</td><td class="number">2.82</td><td class="number">3x</td></tr>
-        <tr><td nowrap="">Blame</td><td class="desc">Line annotation of a single file (array.c)</td><td class="number">1.91</td><td class="number">3.04</td><td class="number">1x</td></tr>
-      </tbody>
-    </table>
+    <div class="responsive-table">
+      <table class="benchmarks">
+        <tbody>
+          <tr>
+            <th>Operation</th>
+            <th></th>
+            <th class="right">Git</th>
+            <th class="right">SVN</th>
+          </tr>
+          <tr><td nowrap="">Commit Files (A)</td><td class="desc">Add, commit and push 113 modified files (2164+, 2259-)</td><td class="number">0.64</td><td class="number">2.60</td><td class="number">4x</td></tr>
+          <tr><td nowrap="">Commit Images (B)</td><td class="desc">Add, commit and push a thousand 1&nbsp;kB images</td><td class="number">1.53</td><td class="number">24.70</td><td class="number">16x</td></tr>
+          <tr><td nowrap="">Diff Current</td><td class="desc">Diff 187 changed files (1664+, 4859-) against last commit</td><td class="number">0.25</td><td class="number">1.09</td><td class="number">4x</td></tr>
+          <tr><td nowrap="">Diff Recent</td><td class="desc">Diff against 4 commits back (269 changed/3609+,6898-)</td><td class="number">0.25</td><td class="number">3.99</td><td class="number">16x</td></tr>
+          <tr><td nowrap="">Diff Tags</td><td class="desc">Diff two tags against each other (v1.9.1.0/v1.9.3.0)</td><td class="number">1.17</td><td class="number">83.57</td><td class="number">71x</td></tr>
+          <tr><td nowrap="">Log (50)</td><td class="desc">Log of the last 50 commits (19&nbsp;kB of output)</td><td class="number">0.01</td><td class="number">0.38</td><td class="number">31x</td></tr>
+          <tr><td nowrap="">Log (All)</td><td class="desc">Log of all commits (26,056 commits &ndash; 9.4&nbsp;MB of output)</td><td class="number">0.52</td><td class="number">169.20</td><td class="number">325x</td></tr>
+          <tr><td nowrap="">Log (File)</td><td class="desc">Log of the history of a single file (array.c &ndash; 483 revs)</td><td class="number">0.60</td><td class="number">82.84</td><td class="number">138x</td></tr>
+          <tr><td nowrap="">Update</td><td class="desc">Pull of Commit A scenario (113 files changed, 2164+, 2259-)</td><td class="number">0.90</td><td class="number">2.82</td><td class="number">3x</td></tr>
+          <tr><td nowrap="">Blame</td><td class="desc">Line annotation of a single file (array.c)</td><td class="number">1.91</td><td class="number">3.04</td><td class="number">1x</td></tr>
+        </tbody>
+      </table>
+    </div>
 
     <p>
       Note that this is the best case scenario for SVN&mdash;a server with no load with a
@@ -121,21 +123,21 @@
       version. As seen in the above charts, it's not considerably slower for an operation
       that is only performed once.
     </p>
-
-    <table class="benchmarks">
-      <tbody>
-        <tr>
-          <th>Operation</th>
-          <th></th>
-          <th class="right">Git*</th>
-          <th class="right">Git</th>
-          <th class="right">SVN</th>
-        </tr>
-        <tr><td nowrap="">Clone</td><td class="desc">Clone and shallow clone(*) in Git vs checkout in SVN</td><td class="number">21.0</td><td class="number">107.5</td><td class="number">14.0</td></tr>
-        <tr><td nowrap="">Size (MB)</td><td class="desc">Size of total client side data and files after clone/checkout (in MB)</td><td></td><td class="number">181.0</td><td class="number">132.0</td></tr>
-      </tbody>
-    </table>
-
+    <div class="responsive-table">
+      <table class="benchmarks">
+        <tbody>
+          <tr>
+            <th>Operation</th>
+            <th></th>
+            <th class="right">Git*</th>
+            <th class="right">Git</th>
+            <th class="right">SVN</th>
+          </tr>
+          <tr><td nowrap="">Clone</td><td class="desc">Clone and shallow clone(*) in Git vs checkout in SVN</td><td class="number">21.0</td><td class="number">107.5</td><td class="number">14.0</td></tr>
+          <tr><td nowrap="">Size (MB)</td><td class="desc">Size of total client side data and files after clone/checkout (in MB)</td><td></td><td class="number">181.0</td><td class="number">132.0</td></tr>
+        </tbody>
+      </table>
+    </div>
     <p>
       It's also interesting to note that the size of the data on the client side
       is very similar even though Git also has every version of every file for the
@@ -149,4 +151,3 @@
     </div>
 
   </section>
-
