--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -4,7 +4,7 @@
      <% else %>
       Latest version
       <% end %> ▾ </a>
-<span class="light"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
+<span class="light d-flex"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
 <div class='dropdown-panel left' id='previous-versions-dropdown'>
   <header>Changes in the <strong><%= @doc_file.name %></strong> manual</header>
   <ol class='reference-previous-versions'>
