--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,8 @@
-<aside class="sidebar">
+<div id="overlay"></div>
+<aside class="sidebar" id="sidebar">
+  <span class="sidebar-btn" title="Toggle Sidebar">
+    <img src="/images/icons/sidebar@2x.png" width="24" height="24" alt="sidebar-toggleBtn" />
+  </span>
   <nav>
     <ul>
       <li>
