--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -48,8 +48,8 @@ form#search {
     @include border-radius(20px);
     width: 100%;
     height: 20px;
-    margin-top: 5px;
-    margin-bottom: 1px;
+    margin-top: 4px;
+    margin-bottom: 2px;
     line-height: 1em;
     color: $font-color;
     background-color: transparent;
@@ -59,5 +59,25 @@ form#search {
   &.focus {
     border-color: #007175;
     background-color: #fff;
+  }
+}
+
+// Breakpoint ----------------
+@media (max-width: $default) {
+  form#search{
+    @include center-transformX;
+    margin-top: 7px;
+    top: unset;
+    width: 92%;
+  }
+}
+
+// Mobile
+@media (max-width: $mobile-m) {
+  form#search{
+    width: 84%;
+    #search-text {
+      padding: 0.3rem 0.1rem;
+    }
   }
 }
