--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -59,3 +59,23 @@
       background-size: $w $h;
     }
 }
+
+@mixin center-transformX {
+  transform: translateX(-50%);
+  left: 50%;
+}
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin flex-column-r {
+  display: flex;
+  flex-direction: column-reverse;
+}
