--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -403,3 +403,133 @@ table.benchmarks {
     }
   }
 }
+// scrollToTop 
+.scrollToTop {
+  @include border-radius(50px);
+  position: fixed;
+  background-color: rgba(223, 221, 213, 0.33);
+  right: 20px;
+  bottom: 6.25rem;
+  padding: 0.8rem;
+  height: 20px;
+  display: none;
+  transition: background-color 0.2s;
+  width: 20px;
+  &:hover{
+    background-color: rgba(250, 250, 250, 0.9);
+    @include box-shadow(2px);
+    &::before {
+      @include center-transformX;
+      width: 0;
+      height: 0;
+      color: var(--color-neutral-emphasis-plus);
+      content: "";
+      border: 6px solid transparent;
+      border-color:$black-3 transparent transparent;
+      top: -0.55rem;
+      position: absolute;
+    }
+    &::after {
+      @include center-transformX;
+      top: -2rem;
+      border-radius: 4px;
+      position: absolute;
+      content: attr(data-label);
+      word-wrap: break-word;
+      white-space: pre;
+      padding: .5em .75em;
+      color:$callout-color;
+      background-color:$black-3;
+      font: normal normal 11px/1.5 -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+    }
+  }
+}
+
+// Breakpoint ----------------
+@media (max-width: $default) {
+  .responsive-table {
+    overflow-x: auto;
+  }
+  .center img {
+    height: 100%;
+  }
+  header{
+    margin-bottom: 10px;
+    a, span {
+      padding-left: 1rem;
+      margin-bottom: 10px ;
+    }
+  }
+  #content {
+    width: 100%;
+  }
+  .inner {
+    width: 100%;
+  }
+  #content-wrapper {
+    padding: 0.8rem;
+  }
+  
+  #masthead {
+    height: unset;
+    .inner {
+      display: flex;
+      margin-top: 1.8rem;
+      div:first-of-type {
+        padding:1rem;
+      }
+      .illustration-wrapper {
+        display: flex;
+        align-items: center;
+      }
+      p {
+        width: unset;
+      }
+      img.illustration {
+        position: unset;
+        right: unset;
+        top: unset;
+        max-height: 100%;
+      }
+    }
+  }
+  footer {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+// Mobile
+@media (max-width: $mobile-m) {
+  header {
+    padding-bottom: 2rem;
+    #tagline {
+      font-size: 0.8rem;
+      top: 0;
+      padding-right: 1rem;
+    }
+  }
+  #masthead {
+    .inner {
+      flex-direction: column-reverse;
+    }
+    .illustration-wrapper {
+      @include flex-center;
+      overflow: hidden;
+      .illustration {
+        width: 80%;
+        height: 100%;
+      }
+    }
+  }
+  footer {
+    @include flex-center;
+    flex-direction: column;
+    align-items: center;
+    .site-source {
+      margin-bottom: 1rem;
+    }
+  }
+  .scrollToTop {
+    bottom: 6rem;
+  }
+}
