minor css fixes

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -95,6 +95,7 @@ aside {
 
   img {
     max-width: 100%;
+    height: auto;
   }
 }
 
@@ -501,13 +502,14 @@ table.benchmarks {
 // Mobile
 @media (max-width: $mobile-m) {
   header {
-    padding-bottom: 2rem;
+    padding-bottom: 2.5rem;
     #tagline {
       font-size: 0.8rem;
       top: 0;
       padding-right: 1rem;
     }
   }
+  #home { header { padding-bottom: 2rem; } }
   #masthead {
     .inner {
       flex-direction: column-reverse;
@@ -518,6 +520,21 @@ table.benchmarks {
       .illustration {
         width: 80%;
         height: 100%;
+      }
+    }
+  }
+  #main {
+    >.two-column {
+      .column-right {
+        position: relative;
+        @include flex-center;
+      }
+    }
+    .two-column {
+      display: flex;
+      flex-direction: column;
+      .column-left, .column-right {
+        width: 100%;
       }
     }
   }
