--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -509,7 +509,7 @@ table.benchmarks {
       padding-right: 1rem;
     }
   }
-  #home { header { padding-bottom: 2rem; } }
+  #home { > header { padding-bottom: 2rem; } }
   #masthead {
     .inner {
       flex-direction: column-reverse;
