Minor fix: Responsive dropdowns

--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -69,3 +69,13 @@
   display: flex;
   justify-content: center;
 }
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin flex-column-r {
+  display: flex;
+  flex-direction: column-reverse;
+}
