--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -531,10 +531,49 @@ table.benchmarks {
       }
     }
     .two-column {
-      display: flex;
-      flex-direction: column;
+      @include flex-column;
       .column-left, .column-right {
         width: 100%;
+      }
+    }
+  }
+  // Topics dropdown
+  #book-chapters,
+  #reference-version {
+    .dropdown-panel {
+      width: unset;
+      .three-column {
+        @include flex-column;
+        height: 70vh;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        .column-left,
+        .column-middle,
+        .column-right {
+          width: 100%;
+          max-width: 300px;
+        }
+        .unstyled { a {
+          padding: 0.15rem 0;
+          display: block;
+        }}
+        
+        .chapter{
+          h2 {
+            display: flex;
+            align-items: center; 
+            a { padding-left: 5px; }
+          }
+          ol { 
+            li {
+              display: flex;
+              align-items: center;
+              margin-bottom: 6px;
+              padding: 0.45rem 0;
+               a { padding-left: 5px;}
+            }
+          }
+        }
       }
     }
   }
