Patch for table

--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -123,21 +123,21 @@
       version. As seen in the above charts, it's not considerably slower for an operation
       that is only performed once.
     </p>
-
-    <table class="benchmarks">
-      <tbody>
-        <tr>
-          <th>Operation</th>
-          <th></th>
-          <th class="right">Git*</th>
-          <th class="right">Git</th>
-          <th class="right">SVN</th>
-        </tr>
-        <tr><td nowrap="">Clone</td><td class="desc">Clone and shallow clone(*) in Git vs checkout in SVN</td><td class="number">21.0</td><td class="number">107.5</td><td class="number">14.0</td></tr>
-        <tr><td nowrap="">Size (MB)</td><td class="desc">Size of total client side data and files after clone/checkout (in MB)</td><td></td><td class="number">181.0</td><td class="number">132.0</td></tr>
-      </tbody>
-    </table>
-
+    <div class="responsive-table">
+      <table class="benchmarks">
+        <tbody>
+          <tr>
+            <th>Operation</th>
+            <th></th>
+            <th class="right">Git*</th>
+            <th class="right">Git</th>
+            <th class="right">SVN</th>
+          </tr>
+          <tr><td nowrap="">Clone</td><td class="desc">Clone and shallow clone(*) in Git vs checkout in SVN</td><td class="number">21.0</td><td class="number">107.5</td><td class="number">14.0</td></tr>
+          <tr><td nowrap="">Size (MB)</td><td class="desc">Size of total client side data and files after clone/checkout (in MB)</td><td></td><td class="number">181.0</td><td class="number">132.0</td></tr>
+        </tbody>
+      </table>
+    </div>
     <p>
       It's also interesting to note that the size of the data on the client side
       is very similar even though Git also has every version of every file for the
