--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -169,3 +169,23 @@ table.binaries {
     border: solid 1px transparent;
   }
 }
+// Breakpoint ----
+@media (max-width: $default){
+  ol#about-nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: $mobile-m){
+  ol#about-nav {
+    justify-content: unset;
+    li {
+      padding-right: 0;
+      margin-right: 0.6rem;
+      flex-basis: 29%;
+      margin-bottom: 1rem;
+    }
+  }
+}
