--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -59,3 +59,33 @@
       background-size: $w $h;
     }
 }
+
+@mixin center-transformX {
+  transform: translateX(-50%);
+  left: 50%;
+}
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin flex-column-r {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+@mixin responsive-sidebar-ui {
+  background-color: #efefe7;
+  z-index: 305;
+  left: 0;
+  box-shadow: 6px 2px 8px 0px rgba(28,28,28,0.10%);
+  border: thin solid #ddd;
+  border-radius: 0 5px 5px 0;
+  transform: translateX(0%);
+}
