--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -314,6 +314,9 @@ ol.reference-previous-versions {
   @include background-image-2x("/images/icons/book", 54px, 72px, 24px 20px);
   padding: 20px 30px 20px 100px !important;
   background-color: $callout-color;
+  iframe {
+    max-width: 100%;
+  }
 
   h3 {
     font-size: 18px;
@@ -358,5 +361,20 @@ code.command {
   &::before {
     content: '$ ';
     font-weight: bold;
+  }
+}
+// Breakpoint ---
+@media (max-width: $default){
+  #video-container {
+    iframe {
+      width: 100%;
+    }
+  }
+}
+@media (max-width: $mobile-m){
+  #video-container {
+    iframe {
+      height: auto;
+    }
   }
 }
