--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -128,3 +128,18 @@ ol.full-search-results {
   padding-top: 1em !important;
   margin-bottom: 2em !important;
 }
+
+// Breakpoint ---
+@media (max-width: $default) {
+  #search-results{
+    @include center-transformX;
+    top: unset;
+    width: 98%;
+  }
+}
+// Mobile
+@media (max-width: $mobile-m) {
+  #search-results{
+    margin-top: 4px;
+  }
+}
