--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
 <div id='main'>
   <h1>Book</h1>
   <% if @book.edition == 2 %>
-    <div style="float:right;margin: -20px 40px 0 40px;">
+   <div class="book-wrapper">
       <img  src="/images/progit2.png" width="118" height="157"/>
       <div style="light">2nd Edition (2014)</div>
       <% if (@book.ebook_pdf || @book.ebook_epub || @book.ebook_mobi) %>
@@ -32,7 +32,7 @@
       <% end %>
      </div>
   <% else %>
-    <div style="float:right;margin: -20px 40px 0 40px;">
+    <div class="book-wrapper">
       <img  src="/images/books/pro-git@2x.jpg" width="118" height="157"/>
       <div>1st Edition (2009)</div>
       <% if @book.has_edition(2) %>
