--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,5 +7,7 @@
     Git is a member of <a href="/sfc">Software Freedom Conservancy</a>
   </div>
 </footer>
-
+<a href="#top" class="no-js scrollToTop" id="scrollToTop" data-label="Scroll to top">
+  <img src="/images/icons/chevron-up@2x.png" width="20" height="20" alt="scroll-to-top"/>
+</a>
 <%= javascript_include_tag "application" %>
