--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,5 @@
-<aside class="sidebar">
+<button class="sidebar-btn"></button>
+<aside class="sidebar" id="sidebar">  
   <nav>
     <ul>
       <li>
