--- a/app/assets/stylesheets/front-page.scss
+++ b/app/assets/stylesheets/front-page.scss
@@ -331,3 +331,87 @@ a.icon {
     @include background-image-2x("/images/icons/source-code", 25px, 20px, 0 6px);
   }
 }
+
+
+
+// Breakpoint ----------------
+@media (max-width: $default) {
+  #front-content {
+    display: flex;
+    #front-navigation {
+      width: 50%;
+      #front-nav {
+        ul {
+          padding: 0 1rem 0 0;
+          li {
+            margin-bottom: 1rem !important;
+            margin-right: 0 !important;
+          }
+        }
+      }
+      #front-book {
+        width: unset;
+      }
+    }
+    #front-downloads {
+      width: 50%;
+      .monitor {
+        @include center-transformX;
+      }
+      table{
+        @include center-transformX;
+        tbody, tr {
+          display: flex;
+          flex-direction: column;
+        }
+        td {
+          margin-bottom: 1rem;
+          a { padding-left: 2.3rem; }
+        }
+      }
+    }
+  }
+  #companies-projects {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    li {
+      margin: 0.7rem 0.4rem;
+    }
+  }
+}
+
+// Mobile
+@media (max-width: $mobile-m) {
+  #front-content{
+    flex-direction: column-reverse;
+    #front-navigation, #front-downloads {
+      width: 100%;
+      border-right: none;
+    }
+    #front-navigation {
+      #front-nav  {
+        ul {
+          padding: 0 1rem;
+        }
+      }
+      #front-book {
+        @include flex-center;
+        align-items: center;
+      }
+    }
+    #front-downloads {
+      border-bottom: 1px solid $base-border-color;
+      margin-bottom: 2rem;
+      padding-bottom: 1rem;
+      .monitor, table {
+        position: relative;
+      }
+      table {
+        top: 0;
+      }
+    }
+  }
+}
