--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -13,7 +13,6 @@ hr.sidebar {
 aside.sidebar {
   font-size: 13px !important;
   line-height: $base-line-height * 0.75;
-
   p {
     font-size: 13px !important;
     line-height: $base-line-height * 0.75;
@@ -28,6 +27,43 @@ aside.sidebar {
 
     p {
       margin-bottom: 0;
+    }
+  }
+}
+// Floating sidebar button for tablet and smaller screens
+aside.sidebar.active {
+    @include responsive-sidebar-ui;
+}
+.sidebar-btn {
+  display: none;
+}
+
+// Breakpoint ----------------
+@media (max-width: $default) {
+  .sidebar-btn {
+    @include background-image-2x("/images/icons/sidebar", 24px, 24px, left center);
+    @include border-top-right-radius(5px);
+    @include border-bottom-right-radius(5px);
+    background-color: $black-3 !important;
+    display: block;
+    position: fixed;
+    padding: 2rem 0.4rem;
+    z-index: 1;
+    border: none;
+    left: 0;
+    width: 1.6rem;
+    &:focus + .sidebar {  
+      @include responsive-sidebar-ui;
+    }
+  }
+  aside{
+    &.sidebar {
+      position: absolute;
+      transform: translateX(-105.5%);
+      transition: transform 0.3s, background-color 0.3s;
+      padding: 20px;
+      height: 100%;
+      z-index: 10;
     }
   }
 }
