--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <meta charset='utf-8'>
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= @page_title.present? ? @page_title : "Git" %></title>
 
   <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
