Updated Git Book image link
Image link was broken.

--- a/app/views/doc/_ext_books.erb
+++ b/app/views/doc/_ext_books.erb
@@ -51,7 +51,7 @@
         </p>
       </li>
       <li>
-        <a href="http://gitforteams.com/"><img src="http://akamaicovers.oreilly.com/images/0636920034520/cat.gif"></a>
+        <a href="http://gitforteams.com/"><img src="https://learning.oreilly.com/library/cover/9781491911204/250w"></a>
         <h4><a href="http://gitforteams.com/">Git for Teams</a></h4>
         <p class='description'>
           By Emma Jane Hogbin Westby
