Error page responsiveness, responsive sidebar updated

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -152,7 +152,7 @@ ol.book-toc {
 }
 
 .book-wrapper {
-  float:right;
+  float: right;
   margin: -20px 40px 0 40px;
 }
 
@@ -163,5 +163,11 @@ ol.book-toc {
   .book-wrapper {
     position: sticky;
     top: 2rem;
+  }
+}
+
+@media (max-width: $mobile-xs) {
+  .book-wrapper {
+    margin-right: 0;
   }
 }
