--- a/app/assets/stylesheets/errors.scss
+++ b/app/assets/stylesheets/errors.scss
@@ -16,34 +16,55 @@ body {
 }
 
 .inner {
-  width: 500px;
+  max-width: 500px;
   margin: 70px auto;
+  text-align: center;
 }
 
 p {
   font-size: 18px;
   color: lighten(#4e443c, 10%);
   margin-bottom: 30px;
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 nav ul {
-  list-style: none;
-  font-size: 16px;
-  font-weight: bold;
-  margin-left: 0;
-  margin-bottom: 1.4em;
-  li {
-    display: inline;
-    float: left;
-    a {
-      display: block;
-      color: $orange;
-      &:hover {
-        color: darken($orange, 5%);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 0;
+    margin-bottom: 1.4em;
+    li {
+      a {
+        display: block;
+        color: $orange;
+        &:hover {
+          color: darken($orange, 5%);
+        }
       }
     }
-  }
-  li + li {
-    margin-left: 15px;
+    li + li {
+      margin-left: 15px;
+    }
+}
+
+// Mobile
+@media (max-width: $mobile-m) {
+  nav ul {
+    li {
+      margin-left: 0;
+      a {
+        padding: 1em;
+      }
+    }
+    li + li {
+      margin-left: 0;
+    }
   }
 }
