--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -58,12 +58,14 @@ aside.sidebar.active {
   }
   aside{
     &.sidebar {
-      position: absolute;
+      position: fixed;
+      top: 1em;
       transform: translateX(-105.5%);
       transition: transform 0.3s, background-color 0.3s;
       padding: 20px;
-      height: 100%;
-      z-index: 10;
+      height: 90vh;
+      overflow-y: scroll;
+      z-index: 1001 !important;
     }
   }
 }
