--- a/app/views/downloads/download_windows.html.erb
+++ b/app/views/downloads/download_windows.html.erb
@@ -17,19 +17,24 @@
       <%= raw "<strong><a id=\"auto-download-link\" href=\"#{@download.url}\">Click here to download manually</a><span class=\"hide\">, if your download hasn't started.</span></strong>" %>
     </p>
     <h3>Other Git for Windows downloads</h3>
-    <h4>Git for Windows Setup</h4>
+    <h4>Executable Setup</h4>
     <p>
-      <%= raw "<strong><a href=\"#{@download32.url}\">32-bit Git for Windows Setup</a>.</strong>" %>
+    <%= raw "<strong><a href=\"#{@download32.url}\">32-bit Git for Windows Setup</a>.</strong>" %>
     </p>
     <p>
-      <%= raw "<strong><a href=\"#{@download64.url}\">64-bit Git for Windows Setup</a>.</strong>" %>
+    <%= raw "<strong><a href=\"#{@download64.url}\">64-bit Git for Windows Setup</a>.</strong>" %>
     </p>
-    <h4>Git for Windows Portable ("thumbdrive edition")</h4>
+    <h4>Portable ("thumbdrive edition")</h4>
     <p>
       <%= raw "<strong><a href=\"#{@download32portable.url}\">32-bit Git for Windows Portable</a>.</strong>" %>
     </p>
     <p>
       <%= raw "<strong><a href=\"#{@download64portable.url}\">64-bit Git for Windows Portable</a>.</strong>" %>
+    </p>
+    <h4>Using winget tool</h4>
+    <p>
+      Install <a href="https://docs.microsoft.com/en-us/windows/package-manager/winget">winget tool</a> if you don't already have it, then type this command in command prompt or Powershell.<br>
+      <code>winget install --id Git.Git -e --source winget</code>
     </p>
     <p class="small">
       <%= raw "The current source code release is version <strong>#{@latest.name}</strong>. If you want the newer version, you can build it from <a href=\"#{@source_url}\">the source code</a>." %>
