Responsive sidebar fixed for Apple devices

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -60,6 +60,7 @@ aside.sidebar.active {
     &.sidebar {
       position: fixed;
       top: 1em;
+      -webkit-transform: translateX(-105.5%);
       transform: translateX(-105.5%);
       transition: transform 0.3s, background-color 0.3s;
       padding: 20px;
