--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -61,6 +61,7 @@
 }
 
 @mixin center-transformX {
+  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   left: 50%;
 }
@@ -87,5 +88,6 @@
   box-shadow: 6px 2px 8px 0px rgba(28,28,28,0.10%);
   border: thin solid #ddd;
   border-radius: 0 5px 5px 0;
-  transform: translateX(0%);
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
 }
