--- a/app/views/downloads/logos/index.html.erb
+++ b/app/views/downloads/logos/index.html.erb
@@ -18,6 +18,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Logo-2Color.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Logo-2Color.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Logo-2Color.svg" %>
           </p>
         </li>
         <li>
@@ -27,6 +29,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Logo-1788C.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Logo-1788C.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Logo-1788C.svg" %>
           </p>
         </li>
         <li>
@@ -36,6 +40,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Logo-Black.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Logo-Black.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Logo-Black.svg" %>
           </p>
         </li>
         <li>
@@ -45,6 +51,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Logo-White.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Logo-White.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Logo-White.svg" %>
           </p>
         </li>
       </ul>
@@ -58,6 +66,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Icon-1788C.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Icon-1788C.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Icon-1788C.svg" %>
           </p>
         </li>
         <li>
@@ -67,6 +77,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Icon-Black.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Icon-Black.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Icon-Black.svg" %>
           </p>
         </li>
         <li>
@@ -76,6 +88,8 @@
             <%= link_to "PNG (bitmap)", "/images/logos/downloads/Git-Icon-White.png" %>
             &middot;
             <%= link_to "EPS (vector)", "/images/logos/downloads/Git-Icon-White.eps" %>
+            &middot;
+            <%= link_to "SVG (vector)", "/images/logos/downloads/Git-Icon-White.svg" %>
           </p>
         </li>
       </ul>
